complete Enrollment for wire frames.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="registered_successfully">Registered Successfully.</string>
     <string name="something_went_wrong">Something went wrong, please try again!</string>
     <string name="enrollment">Enrollment</string>
+    <string name="enrollment_success">You are successfully registered.</string>
 
 </resources>
