Added network check and portrait orientation

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="something_went_wrong">Something went wrong, please try again!</string>
     <string name="enrollment">Enrollment</string>
     <string name="enrollment_success">You are successfully registered.</string>
+    <string name="no_network_msg">No Network Connection, Please connect and try again!</string>
 
 </resources>
