--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -14,9 +14,11 @@
     <string name="prompt_re_enter_password">Re-enter Password</string>
     <string name="prompt_select_question">Select security Question</string>
     <string name="action_Login">Login</string>
+    <string name="action_reset">Reset</string>
     <string name="action_Submit">Submit</string>
     <string name="action_create_account">Create Account</string>
     <string name="signup_suggestion">Not Registered? Sign up here</string>
+    <string name="forgot_password">Forgot Password?</string>
     <string name="login_suggestion">Already Registered? Login.</string>
     <string name="valid_first_name">Enter valid first name</string>
     <string name="valid_last_name">Enter valid last name</string>
@@ -25,6 +27,7 @@
     <string name="password_not_matching">Password not matching!</string>
     <string name="registered_successfully">Registered Successfully.</string>
     <string name="something_went_wrong">Something went wrong, please try again!</string>
+    <string name="forgot_password_success_msg">Please check your mail and reset password!</string>
     <string name="enrollment">Enrollment</string>
     <string name="enrollment_success">You are successfully registered.</string>
     <string name="no_network_msg">No Network Connection, Please connect and try again!</string>
