--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -30,6 +30,6 @@
     <string name="forgot_password_success_msg">Please check your mail and reset password!</string>
     <string name="enrollment">Enrollment</string>
     <string name="enrollment_success">You are successfully registered.</string>
-    <string name="no_network_msg">No Network Connection, Please connect and try again!</string>
+    <string name="no_network_msg">Please check your network, try again!</string>
 
 </resources>
