--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="action_Login">Login</string>
     <string name="action_reset">Reset</string>
     <string name="action_Submit">Submit</string>
-    <string name="action_create_account">Create Account</string>
+    <string name="action_create_account">Next</string>
     <string name="signup_suggestion">Not Registered? Sign up here</string>
     <string name="enroll_now">Don\'t have an account? Enroll Now</string>
     <string name="forgot_password">Forgot Password?</string>
