--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="enrollment">Enrollment</string>
     <string name="enrollment_success">You are successfully registered.</string>
     <string name="no_network_msg">Please check your network, try again!</string>
+
+    <string name="enrollment_success_dialog_tittle">Validation sent to email address entered.</string>
+    <string name="enrollment_success_dialog_msg">Validation must be completed in 30days or you will be prompted to validate again.</string>
+
+
 </resources>
