--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -45,4 +45,7 @@
     <string name="fad_search_location_hint">Search Location</string>
     <string name="find_a_doctor">Find a Doctor</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
