--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -49,5 +49,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="appointments">Appointments</string>
+    <string name="home">Home</string>
+    <string name="profile">Profile</string>
 
 </resources>
