Playing around with Creating Appointments

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -58,5 +58,6 @@
     <string name="appointments">Appointments</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
+    <string name="details">Details</string>
 
 </resources>
