--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -48,16 +48,16 @@
     <string name="find_a_doctor">Find Care</string>
     <string name="provider_details">Provider Details</string>
     <string name="profile_view">Profile</string>
-    <string name="peofile_edit">Edit Profile</string>
+    <string name="profile_edit">Edit Profile</string>
     <string name="my_home">My Home</string>
     <string name="my_appointments">Appointments</string>
     <string name="settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appointments">Appointments</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
     <string name="details">Details</string>
+    <string name="share_appointment">Share Appointment</string>
 
 </resources>
