Cleaned up Toolbar of ToS

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="profile">Profile</string>
     <string name="details">Details</string>
     <string name="share_appointment">Share Appointment</string>
+    <string name="terms_of_service">Terms of Service</string>
 
 </resources>
