--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="terms_of_service">Terms of Service</string>
     <string name="developer_settings">Developer Settings</string>
     <string name="no_providers">No Providers found\n Please change your search criteria.</string>
+    <string name="no_education_found">No Education Found</string>
 
 </resources>
