--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -46,5 +46,67 @@
     <string name="no_providers">No Providers found\n Please change your search criteria.</string>
     <string name="no_education_found">No Education Found</string>
     <string name="appointment_reschedule">To reschedule or cancel your appointment, please call your doctor\'s location directly.</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="unknown">Unknown</string>
+    <string name="find_care">Find Care</string>
+    <string name="miles_concat">mi</string>
+    <string name="forgot_password_header">Please enter your email address.</string>
+    <string name="forgot_password_subheader">An email will be sent to entered address with reset instructions</string>
+    <string name="booking_select_person_header">Who is this appointment for?</string>
+    <string name="me">Me</string>
+    <string name="family_member">Family Member</string>
+    <string name="booking_reason_hint">Please tell us the purpose of your visit.</string>
+    <string name="next">Next</string>
+    <string name="contact_us_subheader">We\'re here when you need us.</string>
+    <string name="contact_us_warning">If this is a medical emergency, please call 911 immediately.</string>
+    <string name="contact_us_header">Thank you for visiting \n Dignity Health.</string>
+    <string name="save">Save</string>
+    <string name="password_criteria">Password Criteria</string>
+    <string name="search_care_or_condition">Search care or condition</string>
+    <string name="user_location">User Location</string>
+    <string name="sort_by">Sort By</string>
+    <string name="distance">Distance</string>
+    <string name="best_match">Best Match</string>
+    <string name="last_name">Last Name</string>
+    <string name="filter_by">Filter By</string>
+    <string name="accepting_new_patients">Accepting New Patients</string>
+    <string name="display_recently_viewed_doctors">Display recently viewed doctors</string>
+    <string name="ok">Ok</string>
+    <string name="did_you_know">Did you know?</string>
+    <string name="learn_more">Learn more</string>
+    <string name="tip_of_the_day">Tip of the Day</string>
+    <string name="go_to_profile">Go to Profile</string>
+    <string name="first_name">First Name</string>
+    <string name="preferred_name">Preferred Name</string>
+    <string name="gender">Gender</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="address">Address</string>
+    <string name="address_2">Address 2</string>
+    <string name="city">City</string>
+    <string name="zip">Zip</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="email">Email</string>
+    <string name="you_cannot_edit_email_address">You cannot edit email address</string>
+    <string name="insurance_provider">Insurance Provider</string>
+    <string name="member_id">Member ID</string>
+    <string name="group_id">Group ID</string>
+    <string name="profile_unavailable">Profile Unavailable</string>
+    <string name="group">Group</string>
+    <string name="edit">Edit</string>
+    <string name="board_certifications">Board Certifications</string>
+    <string name="awards_amp_recognitions"><![CDATA[Awards & Recognitions]]></string>
+    <string name="yes">Yes</string>
+    <string name="languages">Languages</string>
+    <string name="experience">Experience</string>
+    <string name="care_philosophy">Care Philosophy</string>
+    <string name="locations">Locations</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="preferences">Preferences</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="developer">Developer</string>
+    <string name="cancel">Cancel</string>
+    <string name="accept">Accept</string>
 
 </resources>
