Added in Translator Language to Booking Reg forms. Fixed a few quirks. Updated CreateAppointmentResponse from Objects -> Strings

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -149,5 +149,6 @@
     <string name="caregiver_name">Caregiver Name</string>
     <string name="are_you_pregnant">Are You Pregnant</string>
     <string name="weeks_pregnant">Weeks Pregnant</string>
+    <string name="translator_language">Language</string>
 
 </resources>
