--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
 
     <string name="appointments">Appointments</string>
     <string name="home">Home</string>
+    <string name="dashboard">Dashboard</string>
     <string name="profile">Profile</string>
     <string name="details">Details</string>
     <string name="share_appointment">Share Appointment</string>
