Contact Us new design

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="next">Next</string>
     <string name="contact_us_subheader">We\'re here when you need us.</string>
     <string name="contact_us_warning">If this is a medical emergency, please call 911 immediately.</string>
-    <string name="contact_us_header">Thank you for visiting \n Dignity Health.</string>
+    <string name="contact_us_header">Thank you for visiting Dignity Health.</string>
     <string name="save">Save</string>
     <string name="password_criteria">Password Criteria</string>
     <string name="search_care_or_condition">Search care or condition</string>
