--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -155,5 +155,6 @@
     <string name="app_suggest_update_message">Please update your app in the App Store. We have made several improvements since your last visit and don\'t want you to miss out!</string>
     <string name="new_update_available">New Update Available!</string>
     <string name="no_recent_providers">No recently viewed doctors</string>
-
+    <string name="session_expiry">Session Expired!</string>
+    <string name="session_expiry_message">Your login session expired, please login again.</string>
 </resources>
