--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -181,4 +181,6 @@
     <string name="session_expiry_message">Your login session expired, please login again.</string>
     <string name="signout_alert_message">Are you sure you want to sign out?</string>
     <string name="no_locations_found">No Locations Found</string>
+
+    <string name="recent_providers">Recent Providers</string>
 </resources>
