--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="booking_reason_hint">Please tell us the purpose of your visit.</string>
     <string name="next">Next</string>
     <string name="contact_us_subheader">We\'re here when you need us.</string>
-    <string name="contact_us_warning">If this is a medical emergency, please call 911 immediately.</string>
+    <string name="contact_us_warning">If this is an emergency, please call 911 immediately.</string>
     <string name="contact_us_header">Thank you for visiting Dignity Health.</string>
     <string name="save">Save</string>
     <string name="password_criteria">Password Criteria</string>
