Question mark for "Are you Pregnant"

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -148,7 +148,7 @@
     <string name="years">Years</string>
     <string name="gps_dialog_message">Your GPS seems to be disabled, do you want to enable it?</string>
     <string name="caregiver_name">Caregiver Name</string>
-    <string name="are_you_pregnant">Are You Pregnant</string>
+    <string name="are_you_pregnant">Are You Pregnant?</string>
     <string name="weeks_pregnant">Weeks Pregnant</string>
     <string name="translator_language">Language</string>
     <string name="app_force_update_message">Please update your app in the App Store! We have made several improvements since your last visit and your previous version is no longer in use!</string>
@@ -183,4 +183,5 @@
     <string name="no_locations_found">No Locations Found</string>
 
     <string name="recent_providers">Recent Providers</string>
+    <string name="do_you_need_standing_assistance">Do you need standing assistance?</string>
 </resources>
