--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -221,4 +221,5 @@
     <string name="phone_number_unknown">Phone Number Unknown</string>
     <string name="booking_failed">Unable to book.  Please check your information</string>
     <string name="enter_valid_answer">Enter valid answer</string>
+    <string name="gender_required">Gender Required</string>
 </resources>
