Fixed 10520: Updated the Enrollment errors to match iOS copy

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -226,4 +226,9 @@
     <string name="enter_valid_input">Enter valid input</string>
     <string name="enter_valid_email">Enter valid email</string>
     <string name="enter_valid_password">Enter valid password</string>
+    <string name="email_already_exists">An account already exists for this email</string>
+    <string name="password_needs_to_meet_criteria">Password needs to meet criteria</string>
+    <string name="email_needs_to_meet_criteria">Email needs to meet criteria</string>
+    <string name="last_name_needs_to_meet_criteria">Last Name needs to meet criteria</string>
+    <string name="first_name_needs_to_meet_criteria">First Name needs to meet criteria</string>
 </resources>
