--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="new_update_available">New Update Available!</string>
     <string name="no_recent_providers">No recently viewed doctors</string>
     <!--Dashboard-->
+    <string name="dashboard_search_hint">Search for a doctor, speciality or condition</string>
     <string name="db_text_one">The Power of Time Off: Why Vacations Are Essential.</string>
     <string name="db_text_two">A Little Bit of Color: Don\'t Let a Sunburn Get You Down This Summer.</string>
     <string name="db_readmore">Read More</string>
@@ -182,33 +183,37 @@
     <string name="signout_alert_message">Are you sure you want to sign out?</string>
     <string name="no_locations_found">No Locations Found</string>
 
+    <!--Booking Flow-->
     <string name="recent_providers">Recent Providers</string>
     <string name="do_you_need_standing_assistance">Do you need standing assistance?</string>
     <string name="insurance_phone_number">Insurance Phone Number</string>
     <string name="do_you_need_a_translator">Do you need a translator?</string>
     <string name="add_to_calendar">Add to Calendar</string>
-    <string name="dashboard_search_hint">Seach for a doctor, speciality or condition</string>
     <string name="provider_plan">Provider Plan</string>
-    <string name="first_name_required">First Name Required</string>
-    <string name="last_name_required">Last Name Required</string>
-    <string name="zip_invalid">Zip Invalid</string>
-    <string name="phone_number_invalid">Phone Number Invalid</string>
-    <string name="email_invalid">Email Invalid</string>
-    <string name="email_required">Email Required</string>
-    <string name="translator_language_required">Translator Language Required</string>
-    <string name="reason_for_visit_required">Reason For Visit Required</string>
-    <string name="phone_number_required">Phone Number Required</string>
-    <string name="weeks_pregnant_too_large">Weeks Pregnant Too Large</string>
-    <string name="weeks_pregnant_required">Weeks Pregnant Required</string>
-    <string name="date_of_birth_required">Date of Birth Required</string>
-    <string name="date_of_birth_too_young">You Must Be 18 To Book An Appointment</string>
-    <string name="caregiver_required">Caregiver Name Required</string>
-    <string name="insurance_phone_number_invalid">Insurance Phone Number Invalid</string>
-    <string name="group_id_required">Group ID Required</string>
-    <string name="member_id_required">Member ID Required</string>
-    <string name="plan_required">Plan Required</string>
-    <string name="zip_required">Zip Required</string>
-    <string name="please_pick_a_plan">Please Pick a Plan</string>
+    <string name="first_name_required">First Name is required</string>
+    <string name="last_name_required">Last Name is required</string>
+    <string name="zip_invalid">Zipcode is invalid</string>
+    <string name="gender_required">Gender is required</string>
+    <string name="phone_number_invalid">Phone Number is invalid</string>
+    <string name="email_invalid">Email is invalid</string>
+    <string name="email_required">Email is required</string>
+    <string name="translator_language_required">Translator Language is required</string>
+    <string name="reason_for_visit_required">Reason For Visit is required</string>
+    <string name="phone_number_required">Phone Number is required</string>
+    <string name="weeks_pregnant_too_large">Weeks Pregnant is too large</string>
+    <string name="weeks_pregnant_required">Please answer the question</string>
+    <string name="date_of_birth_required">Date of Birth is required</string>
+    <string name="date_of_birth_too_young">You must be 18 to book an appointment</string>
+    <string name="caregiver_required">Caregiver Name is required</string>
+    <string name="insurance_phone_number_invalid">Insurance Phone Number is invalid</string>
+    <string name="group_id_required">Group ID is required</string>
+    <string name="member_id_required">Member ID is required</string>
+    <string name="plan_required">Plan is required</string>
+    <string name="zip_required">Zipcode is required</string>
+    <string name="please_pick_a_plan">Please pick a plan</string>
+    <string name="booking_failed">Unable to book.  Please check your information</string>
+
+    <!--Enrollment-->
     <string name="password_must_be_eight_chars">Password must be at least 8 characters</string>
     <string name="password_cannot_contain_name">Password must not contain part of your name</string>
     <string name="password_needs_one_uppercase">At least one UPPERCASE letter</string>
@@ -219,9 +224,7 @@
     <string name="specialities_unknown">Specialities Unknown</string>
     <string name="address_unknown">Address Unknown</string>
     <string name="phone_number_unknown">Phone Number Unknown</string>
-    <string name="booking_failed">Unable to book.  Please check your information</string>
     <string name="enter_valid_answer">Enter valid answer</string>
-    <string name="gender_required">Gender Required</string>
     <string name="email_already_registered">Email already registered!</string>
     <string name="enter_valid_input">Enter valid input</string>
     <string name="enter_valid_email">Enter valid email</string>
